# catstory-cube-automation

./: CHANGELOG.md  README.md  cube_automation.spec  main.py  pyproject.toml
.claude/skills/release-notes/: SKILL.md
.claude/skills/release-notes/references/: note-template.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dev-build.yml  release.yml  trunk-build.yml
app/: version.py
app/core/: automation.py  condition.py  mouse.py  ocr.py  ocr_logger.py  ocr_test_worker.py
app/cube/: base.py  compare_flow.py  simple_flow.py
app/gui/: condition_editor.py  main_window.py  region_selector.py  roll_log.py  settings_panel.py
app/models/: config.py  potential.py
docs/: architecture.md  implementation.md  ocr-bugfix-log.md
docs/features/condition-rules-v2/: 0-feasibility-study.md  1-requirements.md  2-tech-spec.md
docs/features/condition-rules-v2/requests/: 2026-04-12-core-preset-whitelist-cleanup-r1.md  2026-04-12-ui-mode-merge-summary-r2.md
docs/features/condition-rules-v3/: 1-requirements.md  2-tech-spec.md
docs/features/ocr-matching/: 0-feasibility-study.md  2-tech-spec.md
docs/features/recovery-cube-auto-commit-on-match/: 1-requirements.md  2-tech-spec.md
docs/features/sub-weapon-attack-convertible/: 0-feasibility-study.md  2-tech-spec.md
tests/: conftest.py  test_automation_seed.py  test_compare_flow.py  test_condition.py  test_condition_editor.py  test_config.py  test_locale_sweep.py  test_main_window.py  test_mouse.py  test_potential.py  test_simple_flow.py  test_version.py
(+9 files in other folders)
